bin_PROGRAMS=interception
interception_SOURCES=\
					 status.c status.h\
					 delay.c delay.h\
					 hash.c hash.h\
					 interception.c interception.h\
					 linklist.c linklist.h\
					 nl_firewall.c nl_firewall.h\
					 nl.c nl.h\
					 main.c
interception_LDADD=\
				   ../event/libevent.a\
				   ../communication/libmsg.a
